# instGS

./: .gitignore  evaluate.py  gradient_seg.py  gui.py  registration_pc.py  render_3dgs.py  render_instances.py  render_instances_cuda.py  run_colmap.sh  train_instances.py
arguments/: __init__.py
gaussian_renderer/: __init__.py
scene/: __init__.py  cameras.py  dataset_readers.py  inst_gaussian_model.py
submodules/inst-gaussian-rasterization/: CMakeLists.txt  ext.cpp  rasterize_points.cu  rasterize_points.h  setup.py
submodules/inst-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu
submodules/inst-gaussian-rasterization/inst_gaussian_rasterization/: __init__.py
submodules/inst-gaussian-rasterization/inst_gaussian_rasterization.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
utils/: general_utils.py  graphics_utils.py  pointcloud_utils.py
